Bug #24346
objects in cache never refresh after rgw_cache_expiry_interval
0%
Description
ObjectCacheInfo::time_added is only initialized on first insert. so once an entry reaches its rgw_cache_expiry_interval, it can't be refreshed until the lru removes its entry entirely
Related issues
History
#1 Updated by Matt Benjamin over 4 years ago
I'm unclear why there is any trace of already-expired items. I guess the intrusive cache change doesn't have this issue?
#2 Updated by Casey Bodley over 4 years ago
- Status changed from 12 to Fix Under Review
#3 Updated by Casey Bodley over 4 years ago
Matt Benjamin wrote:
I'm unclear why there is any trace of already-expired items. I guess the intrusive cache change doesn't have this issue?
ObjectCache::get() only takes a read lock, so does not remove these expired items from the map. the lru will remove them eventually
#4 Updated by Matt Benjamin over 4 years ago
- Status changed from Fix Under Review to Pending Backport
- Backport changed from luminous mimic to luminous mimic jewel
jewel added to backports list as the cache expiration change is present
#5 Updated by Pavan Rallabhandi over 4 years ago
It would be great if this can make it to Jewel 10.2.11, thanks!
#6 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24384: luminous: objects in cache never refresh after rgw_cache_expiry_interval added
#7 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24385: mimic: objects in cache never refresh after rgw_cache_expiry_interval added
#8 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24386: jewel: rgw: objects in cache never refresh after rgw_cache_expiry_interval added
#9 Updated by Nathan Cutler over 4 years ago
Pavan Rallabhandi wrote:
It would be great if this can make it to Jewel 10.2.11, thanks!
Do you want to take #24386 then? If you stage the backport quickly, it might make it in.
#10 Updated by Pavan Rallabhandi over 4 years ago
Nathan Cutler wrote:
Pavan Rallabhandi wrote:
It would be great if this can make it to Jewel 10.2.11, thanks!
Do you want to take #24386 then? If you stage the backport quickly, it might make it in.
Sorry Nathan, somehow missed this update. Have raised a backport PR for Jewel now, hope this is still in time.
#11 Updated by Matt Benjamin over 4 years ago
I have already created (last week):
https://github.com/ceph/ceph/pull/22377 (jewel)
https://github.com/ceph/ceph/pull/22369 (luminou)
#12 Updated by Nathan Cutler over 3 years ago
- Status changed from Pending Backport to Resolved