rgw: update ObjectCacheInfo::time_added on overwrite

Fixes: http://tracker.ceph.com/issues/24346

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 124eb5f28cf6e8a33a0d72a1ead8281f6a4e84a7)
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>